omptbx.log
*** Error compiling 'omptbx/tst.py'...
  File "omptbx/tst.py", line 6
    if (omptbx.have_omp_h): print "omptbx.have_omp_h"
                                                    ^
SyntaxError: invalid syntax

